Fix: Modified width of logo on mobile devices

--- a/src/app/App.css
+++ b/src/app/App.css
@@ -4,6 +4,7 @@
 
 .App-logo {
   height: 80px;
+  width:  300px;
 }
 
 .App-header {
